[gd_scene load_steps=5 format=3 uid="uid://dcstv16isk4li"]

[ext_resource type="Script" path="res://Script/ring.gd" id="1_das7k"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3aslv"]
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bu452"]
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ffsd"]

[node name="Ring" type="RigidBody3D" groups=["Rings", "rings_shape"]]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_das7k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_3aslv")

[node name="Area3D" type="Area3D" parent="." groups=["rings_shape"]]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
shape = SubResource("CylinderShape3D_bu452")

[node name="model" type="CSGCylinder3D" parent="."]
radius = 0.44
height = 0.25
material = SubResource("StandardMaterial3D_8ffsd")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
